finishing UserBoundary, UserController initial set up CliqueBoundary, CliqueController

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Jersey Rest Service</servlet-name>
-        <url-pattern>/webresources/*</url-pattern>
+        <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
 </web-app>
